samples/_failures_safe/1761330146_0a81f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83bd57a0.c: In function ‘main’:
./samples/SAFE/__tmp_83bd57a0.c:164:20: error: expected ‘;’ at end of input
  164 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_83bd57a0.c:164:9: error: expected declaration or statement at end of input
  164 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_83bd57a0.c:164:9: error: expected declaration or statement at end of input
